# ChatApp

./: README.md
Client/: .clang-format  .gitignore  CMakeLists.txt  ClientModels.qxee  schema.sql
Client/config/: config.h.in
Client/include/: appmanager.h  appsettings.h  appstate.h  asyncdatabase.h  backendmanager.h  httpstatuscode.h  sqliteasyncdatabase.h  typedefs.h
Client/include/restclients/: authstrategy.h  authstrategy.inl  irestclient.h  irestclientmanager.h  jwtauthclient.h  messageclient.h  restclientbase.h  restclientmanager.h  testclient.h  userclient.h
Client/include/widgets/: logindialog.h  mainwindow.h  messagedelegate.h
Client/models/: CMakeLists.txt  ClientModels.gen.pri  ClientModels.gen.pro
Client/models/include/: ClientModels_all_include.gen.h  ClientModels_export.gen.h  ClientModels_precompiled_header.gen.h  Message.gen.h  Room.gen.h  RoomMembership.gen.h  RoomMembershipRole.gen.h  RoomType.gen.h  User.gen.h  UserRole.gen.h
Client/models/src/: ClientModels_all.gen.cpp  ClientModels_main.gen.cpp  Message.gen.cpp  Room.gen.cpp  RoomMembership.gen.cpp  RoomMembershipRole.gen.cpp  RoomType.gen.cpp  User.gen.cpp  UserRole.gen.cpp
Client/modelview/: CMakeLists.txt  ClientModels.model_view.gen.pri  ClientModels.model_view.gen.pro
Client/modelview/include/: ClientModels_all_include.model_view.gen.h  ClientModels_export.model_view.gen.h  ClientModels_precompiled_header.model_view.gen.h  Message.model_view.gen.h  Room.model_view.gen.h  RoomMembership.model_view.gen.h  User.model_view.gen.h
Client/modelview/src/: ClientModels_all.model_view.gen.cpp  ClientModels_main.model_view.gen.cpp  Message.model_view.gen.cpp  Room.model_view.gen.cpp  RoomMembership.model_view.gen.cpp  User.model_view.gen.cpp
Client/resources/: resources.qrc
Client/resources/schemas/: sqlite_db_create.sql
Client/resources/translations/: ChatClient_en_US.ts  ChatClient_vi_VN.qm  ChatClient_vi_VN.ts
Client/src/: appmanager.cpp  appsettings.cpp  appstate.cpp  asyncdatabase.cpp  backendmanager.cpp  httpstatuscode.cpp  main.cpp  sqliteasyncdatabase.cpp  typedefs.cpp
Client/src/widgets/: mainwindow.cpp  (+1 more)
Client/ui/: logindialog.ui  mainwindow.ui
(+63 files in other folders)
